[package]
name = "rust-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
usb-gadget = { git = "https://github.com/mini-ninja-64/usb-gadget.git", branch = "uvc-function" }
v4l = "0.14.0"
